<resources>
    <string name="app_name">Inventory App</string>
    <string name="prodNameHint">Enter Product Name</string>
    <string name="prodDescHint">Enter Product Description</string>
    <string name="prodPriceHint">Enter Product Price</string>
    <string name="prodQuantityHint">Enter Product Quantity</string>
    <string name="imageText">Pick a photo</string>
    <string name="saveBtnText">SAVE</string>
    <string name="sellBtnText">Sell</string>
    <string name="shipmentBtnText">Receive Shipment</string>
    <string name="orderBtnText">Order</string>
    <string name="deleteBtnText">Delete</string>
    <string name="addBtnText">Add Product</string>
    <string name="emptyTextView">No items available</string>
    <string name="itemNameText">NAME</string>
    <string name="quantityText">QUANTITY</string>
    <string name="priceText">PRICE</string>
    <string name="sellBtnTxt">SELL</string>
</resources>
