<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.inventoryapp.AddProdActivity">

    <EditText
        android:id="@+id/prodNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prodNameHint"/>

    <EditText
        android:id="@+id/prodDescEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prodDescHint"/>

    <EditText
        android:id="@+id/prodPriceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:digits="123456789"
        android:hint="@string/prodPriceHint"
        android:inputType="number"/>

    <EditText
        android:id="@+id/prodQuantityEdiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="123456789"
        android:hint="@string/prodQuantityHint"
        android:inputType="number"/>

    <Button
        android:id="@+id/imageSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/imageText"/>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/saveBtnText"/>
</LinearLayout>
