<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/linearLayoutDimen"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addProdBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/addBtnText"/>

    <TextView
        android:id="@+id/emptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/emptyTextView"
        android:textSize="20sp"/>

    <RelativeLayout android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/relativeDimen">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/itemNameText"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/quantityRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/quantityText"
            android:textSize="@dimen/quantitySize"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/quantityRemaining"
            android:layout_toRightOf="@+id/quantityRemaining"
            android:text="@string/priceText"
            android:textSize="@dimen/priceTextSize"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/prodLists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
